+Fix Bug overflow (CSS)+begin type season Anime+ +délai message

--- a/src/Assets/CSS/App.css
+++ b/src/Assets/CSS/App.css
@@ -17,7 +17,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   min-height: 100vh;
   background-color: #212121;
   color: #ff6d00;
